@@ -431,6 +431,51 @@ class OmESet {
 	om_termcount ebound;
 };
 
+///////////////////////////////////////////////////////////////////
+// OmDatabase class
+// ================
+
+/** This class encapsulates a set of databases.
+ *
+ *  This class is used in conjunction with an OmEnquire object.
+ *
+ *  @exception OmInvalidArgumentError will be thrown if an invalid
+ *  argument is supplied, for example, an unknown database type.
+ *
+ *  @exception OmOpeningError may be thrown if the database cannot
+ *  be opened (for example, a required file cannot be found).
+ */
+class OmDatabase {
+    private:
+	friend class OmEnquireInternal;
+	class Internal;
+	Internal *internal;
+
+    public:
+	OmDatabase();
+	~OmDatabase();
+	OmDatabase(const OmDatabase &other);
+	void operator=(const OmDatabase &other);
+
+	/** Add a new database to use.
+	 *
+	 *  The database may not be opened by this call: the system may wait
+	 *  until a get_mset (or similar call).
+	 *  Thus, failure to open the database may not result in an
+	 *  OmOpeningError exception being thrown until the database is used.
+	 *
+	 *  The database will always be opened read-only.
+	 *
+	 *  @param type    a string describing the database type.
+	 *  @param params  a vector of parameters to be used to open the
+	 *  database: meaning and number required depends on database type.
+	 *
+	 *  @exception OmInvalidArgumentError  See class documentation.
+	 *  @exception OmOpeningError          See class documentation.
+	 */
+	void add_database(const string & type,
+			  const vector<string> & params);
+};
 
 ///////////////////////////////////////////////////////////////////
 // OmEnquire class
@@ -457,27 +502,8 @@ class OmEnquire {
 	OmEnquire(const OmEnquire &);
 	void operator=(const OmEnquire &);
     public:
-        OmEnquire();
+        OmEnquire(const OmDatabase &db);
         ~OmEnquire();
-
-	/** Add a new database to use.
-	 *
-	 *  The database may not be opened by this call: the system may wait
-	 *  until a get_mset (or similar call).
-	 *  Thus, failure to open the database may not result in an
-	 *  OmOpeningError exception being thrown until the database is used.
-	 *
-	 *  The database will always be opened read-only.
-	 *
-	 *  @param type    a string describing the database type.
-	 *  @param params  a vector of parameters to be used to open the
-	 *  database: meaning and number required depends on database type.
-	 *
-	 *  @exception OmInvalidArgumentError  See class documentation.
-	 *  @exception OmOpeningError          See class documentation.
-	 */
-	void add_database(const string & type,
-			  const vector<string> & params);
 
 	/** Set the query to run.
 	 *
